objects/Jenkins_Job__c.object
<CustomObject>
 <fullName>Jenkins_Job__c</fullName>
 <description>Represents a job on a Jenkins CI build server.</description>
 <fields>
  <fullName>Build_Rule__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Build Rule</label>
  <referenceTo>Build_Rule__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>CI_Instance__c</fullName>
  <deleteConstraint>Restrict</deleteConstraint>
  <inlineHelpText>The target instance for this Job</inlineHelpText>
  <label>CI Instance</label>
  <referenceTo>CI_Instance__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <required>true</required>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Is_Validation__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Indicates if this job is performing a validation. When unchecked it indicates this is for a deployment</inlineHelpText>
  <label>Is Validation?</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Path__c</fullName>
  <description>Represents a relative URL path to a job on a Jenkins CI build server.</description>
  <label>Path</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Release__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>Represents a Sightline release.</description>
  <label>Release</label>
  <referenceTo>Release__c</referenceTo>
  <relationshipLabel>Jenkins Jobs</relationshipLabel>
  <relationshipName>Jenkins_Jobs</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Token__c</fullName>
  <description>Represents an authentication token for a job on a Jenkins CI build server.</description>
  <label>Token</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <label>Jenkins Job</label>
 <listViews>
  <fullName>All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>Jenkins Job Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Jenkins Jobs</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>